# Enity

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: Component.h  Entity.h  System.h  SystemHandler.h  World.h
src/: Component.h  Entity.cpp  Entity.h  SystemHandler.cpp  SystemHandler.h  Utility.h  World.cpp  World.h
